# operational-risk-kpi-dashboard

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
config/: config.yaml
data/samples/: machine_telemetry_sample.csv  machines_sample.csv  plants_sample.csv  quality_inspections_sample.csv  work_orders_sample.csv
results/: model_metrics.json
sql/: schema.sql  seed_views.sql
src/: db.py
src/dashboard/: app.py
src/features/: pipeline.py  telemetry_features.py  work_order_features.py
src/ingestion/: generator.py  loader.py
src/kpis/: calculator.py
src/models/: anomaly_detector.py  evaluator.py  risk_classifier.py
src/reporting/: html_report.py  pdf_report.py
src/validation/: business_rules.py  reporter.py  schema_validator.py
tests/: test_features.py  test_generator.py  test_models.py  test_validation.py
