[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "operational-risk-kpi-dashboard"
version = "1.0.0"
description = "End-to-end operational risk analytics platform with predictive modeling and KPI dashboards"
requires-python = ">=3.10"

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
